# pantry-server

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.cursor/plans/: join_household_pantry_migration_5d71313b.plan.md
app/: README.md  main.py
app/ai/: README.md  prompts.py  retriever_cache.py  retriver.py  vector_store.py
app/core/: README.md  cache.py  config.py  errors.py  exceptions.py  logging.py  middleware.py  rate_limit.py
app/models/: README.md  household.py  pantry.py  recipe.py  shopping_list.py  user.py
app/routers/: README.md  __init__.py  health_routes.py  household.py  pantry.py
app/services/: README.md  auth.py  gemini.py  house_hold_service.py  household_service.py  pantry_service.py  supabase.py
app/utils/: README.md  auth.py  constants.py  date_time_styling.py  embedding.py  formatters.py  validators.py
supabase/migrations/: 20260213000000_households_household_members_trigger.sql  20260216000000_household_members_rls_fix.sql
tests/: README.md  conftest.py
tests/integration/: README.md  test_health.py  test_households_api.py  test_pantry_api.py
tests/unit/: README.md  test_auth_service.py  test_core_config.py  test_core_exceptions.py  test_core_logging.py  test_household_service.py  test_pantry_service.py
